# kiroshi

./: .gitignore  .kilocodeignore  AGENTS.md  PLAN.md  README.md  SECURITY.md  _cascade_seeder_hidden.vbs  _pipeline_monitor_hidden.vbs  _slerp_fixer_hidden.vbs  _slerp_runner_hidden.vbs  pyproject.toml
docs/: DEMOTE.md  NAMING_MIGRATION.md  PIPELINE.md
examples/: capture_probe_task.py  hello_mesh.md  job.html  motion_resample.py  pipeline.example.toml  sleep_task.py  task_minimal.py
scripts/: install_service.ps1  mesh_pause.ps1  mesh_resume.ps1  uninstall_service.ps1
src/kiroshi/: __init__.py  __main__.py  advisories.py  appstate.py  atfield.py  atomic.py  autostart.py  bench.py  bottleneck.py  capabilities.py  cli.py  codefinger.py  config.py  (+43 more)
tests/: _tasks.py  test_advisories.py  test_autostart.py  test_autostart_scheduled.py  test_bench.py  test_bottleneck.py  test_bottleneck_integration.py  test_cancel.py  test_capabilities.py  test_clean_tree_gate.py  test_coordlock.py  test_dbmigrate.py  test_decision_ledger.py  test_demote.py  test_doctor_smb.py  test_errclass.py  test_failure_breaker.py  test_failure_breaker_wire.py  test_fair_share.py  test_features.py  test_firewall.py  test_hardening.py  test_headless_stdout.py  test_host_ban.py  test_idle_gate_lease.py  test_idlegate.py  test_inject_roots.py  test_iohint.py  test_jobsearch.py  test_join.py  test_kfs.py  test_lease.py  test_lease_diag.py  test_mcp_process_tools.py  test_mcp_server.py  test_metrics_export.py  test_metrics_persist_on_error.py  test_motion.py  test_nascli.py  test_nascred_available.py  (+29 more)
(+6 files in other folders)
