[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiroshi"
version = "0.0.1"
description = "Zero-broker, work-stealing mesh runner for Windows (and friends). A Fixer hands gigs to Runners; Kiroshi optics let you watch the whole fleet."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["distributed", "mesh", "task-queue", "windows", "work-stealing", "batch", "homelab"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "requests>=2.31",
    "pydantic>=2.0",
]

[project.optional-dependencies]
fast = ["orjson>=3.9"]
toml = ["tomli>=2.0; python_version < '3.11'"]
motion = ["numpy>=1.24"]
tray = ["pystray>=0.19", "pillow>=10.0"]
dev = ["pytest>=8.0", "ruff>=0.4", "numpy>=1.24", "httpx>=0.27"]

[project.scripts]
kiroshi = "kiroshi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kiroshi"]

[tool.ruff]
line-length = 100
target-version = "py310"
